--- a/themes/butterfly/source/css/_layout/head.styl
+++ b/themes/butterfly/source/css/_layout/head.styl
@@ -11,7 +11,7 @@
     position: absolute
     width: 100%
     height: 100%
-    background-color: alpha($dark-black, .0) //封面灰灰
+    background-color: alpha($dark-black, .0) //取消圖片灰灰
     content: ''
 
   // index
